# ai-checker-code

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/components/chat/: service.py
backend/components/core/: settings.py
backend/components/llm/: repository.py  schemas.py  service.py
backend/components/message/: repository.py  service.py
backend/restapi/: events.py  router.py  schemas.py
backend/restapi/routes/: ai_router.py  health.py
frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
frontend/nginx/: nginx.conf
frontend/src/: App.tsx
frontend/src/components/: Answer.tsx  Louder.tsx  Sidebar.tsx
test_lamma_model/: app.py  requirements.txt
